--- a/src/RedisReact/RedisReact/wwwroot/default.html
+++ b/src/RedisReact/RedisReact/wwwroot/default.html
@@ -1,4 +1,4 @@
-<!-- Auto generated file on 2:53:04 PM by RedisReact\gruntfile.js -->
+<!-- Auto generated file on 20:35:13 by RedisReact\gruntfile.js -->
 <!DOCTYPE html>
 <html>
 <head lang="en">
